# JoshPlayer

./: .gitignore  CMakeLists.txt  README.md
Assets/: Library.txt
Dependencies/vlc-2.2.6/: libvlc.exp  libvlc.lib
Source/: CMakeLists.txt  FourCC.cpp  FourCC.hpp  Library.cpp  Library.hpp  MusicPlayer.cpp  MusicPlayer.hpp  WinMain.cpp  iTunesImport.hpp  main.cpp
cmake/: AddFile.cmake  JoshPlayer_Source_Group.cmake  MediaPlaymer_Source_Group.cmake
